# LeviathanDM

./: .gitignore  .gitmodules  ACTION_SYSTEM.md  ARCHITECTURE.md  CHANGELOG-0.0.2.md  CHANGELOG-0.0.3.md  CHANGELOG-0.0.4.md  CHANGELOG-0.0.5.md  CMakeLists.txt  FLUTTER_DIRTY_TRACKING.md  HELP_WINDOW_IMPLEMENTATION.md  README.md  RELEASE-v0.0.4-SUMMARY.md  RELEASE-v0.0.5-SUMMARY.md  RELEASE.md  TODO.md  WALLPAPER_ENGINE_SUMMARY.md  XWAYLAND_FIX_SUMMARY.md  build-xcb-errors.sh  build.sh  leviathan.pc.in  leviathan.sh  run-in-leviathan.sh  setup-deps.sh  start-with-log.sh  test-features.sh  test-help-window.sh  test-nested.sh  test-notifications.sh  version.h.in
.github/: CI_CACHING.md
.github/workflows/: ci.yml  docs.yml  hugo.yml  release.yml
config/: README.md  leviathan.yaml  leviathanrc  libinput-example.yaml  monitor-groups-example.yaml  status-bar-new-style.yaml  status-bars-example.yaml  test-config.yaml  test-new-layout.yaml  test-plugins.yaml  test-status-bar.yaml  wallpaper-engine-example.yaml
docs/: PLUGIN_INTEGRATION_COMPLETE.md  STATUS_BARS.md  STATUS_BAR_IMPLEMENTATION.md  StatusBar-Progress.md  WALLPAPER_ENGINE_IMPLEMENTATION.md  WALLPAPER_ENGINE_INTEGRATION.md  wallpaperengine_dmabuf_example.md
docs-site/: README.md  VERSIONING.md  VERSIONING_GUIDE.md  WALLPAPER_DOCS_UPDATE.md  go.mod  hugo.toml
docs-site-react/: generate-manifest.cjs  index.html  package-lock.json  package.json  vite.config.ts
docs-site-react/public/: content-manifest.json  versions.json
docs-site-react/public/content/: README.md  menubar-integration.md  menubar-usage.md
docs-site-react/public/content/en/docs/about/: releases.md  versioning.md
docs-site-react/public/content/en/docs/features/: _index.md
docs-site-react/public/content/en/docs/getting-started/: keybindings.md
docs-site-react/public/content/v0.0.1/en/docs/development/: contributing.md
docs-site-react/src/: App.tsx  navigation.ts
docs-site-react/src/components/: Layout.tsx  MarkdownRenderer.tsx  NavigationMenu.tsx  Sidebar.tsx  VersionSelector.tsx
docs-site-react/src/context/: ManifestContext.tsx  TOCContext.tsx  VersionContext.tsx
docs-site/content/: _index.md
docs-site/content/docs/development/: architecture.md
docs-site/content/docs/features/: _index.md  window-decorations.md
docs-site/content/docs/getting-started/: configuration.md
docs-site/content/en/: _index.md
docs-site/content/en/docs/about/: releases.md
docs-site/content/en/docs/development/: plugins.md  widget-system.md
docs-site/content/en/docs/features/: _index.md  status-bar.md
docs-site/content/en/docs/getting-started/: building.md
docs-site/data/: versions.toml
docs-site/layouts/partials/docs/: version-selector.html
docs-site/layouts/partials/docs/inject/: menu-before.html
docs-site/layouts/shortcodes/: columns.html  hint.html  version-banner.html  version-feature.html  version-warning.html
include/: Actions.hpp  Config.hpp  ConfigParser.hpp  IPC.hpp  KeyBindings.hpp  Logger.hpp  TilingLayout.hpp  Types.hpp
include/config/: ConfigParser.hpp
include/core/: Client.hpp  Events.hpp  Screen.hpp  Seat.hpp  Tag.hpp  WatchdogTimer.hpp
include/ipc/: IPC.hpp
include/ui/: BaseWidget.hpp  CompositorState.hpp  DBusHelper.hpp  IPopoverProvider.hpp  IconLoader.hpp  KeybindingHelpModal.hpp  MenuBar.hpp  MenuBarManager.hpp  MenuItemProviders.hpp  ModalManager.hpp  NotificationDaemon.hpp  PeriodicWidget.hpp  PluginAPI.hpp  Popover.hpp  ShmBuffer.hpp  StatusBar.hpp  Widget.hpp  WidgetPlugin.hpp  WidgetPluginManager.hpp  WidgetTree.hpp
include/ui/menubar/: MenuBar.hpp  MenuBarManager.hpp  MenuItemProviders.hpp
include/ui/menubar/providers/: AppsProvider.hpp  BookmarksProvider.hpp  CommandsProvider.hpp
include/ui/reusable-widgets/: BaseModal.hpp  Button.hpp  Container.hpp  HBox.hpp  Label.hpp  Modal.hpp  Popover.hpp  ScrollView.hpp  TabBar.hpp  TextField.hpp  TextField.md  VBox.hpp
include/wayland/: Input.hpp  LayerManager.hpp  LayerSurface.hpp  NightLight.hpp  Output.hpp  Server.hpp  View.hpp  WallpaperEngineRenderer.hpp  WallpaperManager.hpp  WaylandTypes.hpp  XwaylandCompat.hpp
include/windows/: HelpWindow.hpp
logger/: CMakeLists.txt  LogFormat.hpp  LogLevel.hpp  LogSink.hpp  README.md  SimpleLogger.hpp
plugins/: PLUGIN_API.md  PLUGIN_DEV_GUIDE.md  README.md  build-all.sh  increment_version.sh  version.h.in
plugins/battery-widget/: BatteryWidget.cpp  CMakeLists.txt  README.md  version.txt
plugins/clock-widget/: CMakeLists.txt  ClockWidget.cpp  README.md  build.sh  version.txt
plugins/network-widget/: CMakeLists.txt  NetworkWidget.cpp  NetworkWidget.hpp
plugins/system-monitor-widget/: CMakeLists.txt  README.md  SystemMonitorWidget.cpp
plugins/taglist-widget/: CMakeLists.txt  TagListWidget.cpp  build.sh
plugins/tags-widget/: CMakeLists.txt  TagsWidget.cpp  TagsWidget.hpp
plugins/tiling-mode-widget/: CMakeLists.txt  TilingModeWidget.cpp  TilingModeWidget.hpp
src/: Actions.cpp  Config.cpp  ConfigParser.cpp  IPC.cpp  KeyBindings.cpp  TilingLayout.cpp  leviathanctl.cpp  main.cpp
src/config/: ConfigParser.cpp
src/core/: Client.cpp  Events.cpp  Screen.cpp  Seat.cpp  Tag.cpp
src/ipc/: IPC.cpp  leviathanctl.cpp
src/layout/: TilingLayout.cpp
src/ui/: BaseWidget.cpp  CompositorState.cpp  DBusHelper.cpp  IconLoader.cpp  KeybindingHelpModal.cpp  MenuBar.cpp  MenuBarManager.cpp  MenuItemProviders.cpp  ModalManager.cpp  NotificationDaemon.cpp  PluginAPI.cpp  Popover.cpp  ShmBuffer.cpp  StatusBar.cpp  Widget.cpp  WidgetPluginManager.cpp  WidgetTree.cpp
src/ui/menubar/: MenuBar.cpp  MenuBarManager.cpp  MenuItemProviders.cpp
src/ui/menubar/providers/: AppsProvider.cpp  BookmarksProvider.cpp  CommandsProvider.cpp
src/ui/reusable-widgets/: BaseModal.cpp  Button.cpp  Container.cpp  HBox.cpp  Label.cpp  Modal.cpp  ScrollView.cpp  TabBar.cpp  TextField.cpp  VBox.cpp
src/wayland/: Input.cpp  LayerManager.cpp  LayerSurface.cpp  NightLight.cpp  Output.cpp  Server.cpp  View.cpp  WallpaperEngineRenderer.cpp  WallpaperManager.cpp  xwayland_compat.c
tinytest/: tinywl
(+18 files in other folders)
